# RadeonProRenderBlenderAddon

./: .gitignore  .gitmodules  Changelog.md  LICENSE.txt  README-LNX.md  README-OSX.md  README.md  RPRBlender.sln  RadeonProRenderBlender.sln  RadeonProRenderBlender.vcxproj  build.cmd  build.py  build.sh  build_osx-arm64.sh  build_osx.sh  run_blender_with_rpr.cmd  run_blender_with_rpr_Ubuntu.sh  run_blender_with_rpr_osx.sh  test.cmd  test.py
.github/: ISSUE_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.md
BlenderPkg/: .gitignore  GetVersion.ps1  README.md  RprBlender.plist  RprBlenderTemplate.plist  build.cmd  build_linux.sh  build_linux_installer.py  build_linux_installer.sh  build_osx-arm64.sh  build_osx.sh  build_osx_installer.py  build_osx_installer.sh  build_win.cmd  build_win_installer.cmd  build_win_installer.py  create_build_output.py  create_osx_build_output.py  create_zip_addon.py  vs_path.bat
BlenderPkg/Installer/: .gitignore  PluginInstaller.sln
BlenderPkg/Installer/PluginInstaller/: PluginInstaller.wixproj  agreement.rtf
BlenderPkg/Installer/PluginInstallerDll/: InstalledBlender.h  Logger.h  PluginInstallerDll.props  PluginInstallerDll.vcxproj  PluginInstallerDll.vcxproj.filters  PythonScriptsExecution.h  checkCompatibility.cpp  checkCompatibility.h  common.h  dllmain.cpp  pluginInstallerDll.cpp  stdafx.cpp  stdafx.h
BlenderPkg/Legal/: eula.txt
BlenderPkg/darwin-support/: README-INSTALLERAPP.txt  README.txt  RadeonProRenderBlenderInstaller.icns  blender_pip.py  install_blender_addon.py  postinstall  postinstall-checker  remove_blender_addon.py  uninstall  welcome.html
BlenderPkg/darwin-support/Checker/: CMakeLists.txt  checker.cpp  formSelect.cpp  formSelect.h
BlenderPkg/linux-support/: install.py  remove_blender_addon.py  uninstall.py
BlenderPkg/linux-support/Checker/: CMakeLists.txt  formSelect.cpp
Components/cpp/IESLight/: IESLightRepresentationCalc.cpp
Components/cpp/ImageFilter/: ImageFilter.h
Components/cpp/SunPosition/: SPA.cpp
FireRender.Blender.Tools/Jenkins/: build_test.jenkinsfile  build_test_28.jenkinsfile
FireRender.Components/: README.md
FireRender.Components/cpp/IESLight/: IESLightRepresentationCalc.cpp  IESLightRepresentationCalc.h  IESprocessor.cpp  IESprocessor.h
FireRender.Components/cpp/ImageFilter/: ImageFilter.cpp  ImageFilter.h
FireRender.Components/cpp/PluginContext/: PluginContext.cpp  PluginContext.h
FireRender.Components/cpp/SunPosition/: SPA.cpp  SPA.h
RPRBlenderHelper/: CMakeLists.txt
RPRBlenderHelper/RPRBlenderHelper/: CitiesDatabase.cpp  CitiesDatabase.h  OpenVdb.cpp  RPRBlenderHelper.cpp  RPRBlenderHelper.vcxproj  RPRBlenderHelper.vcxproj.filters  SkyAttributes.h  SkyBuilder.cpp  SkyBuilder.h  SkyGen.cpp  SkyGen.h  SunPositionCalculator.cpp  SunPositionCalculator.h  dllmain.cpp  math_wrap.h  stdafx.cpp  stdafx.h
cmd_tools/: .gitignore  README.md  blender_pip.py  cmd_script.py  compare_render.py  create_sdk.py  render.py  render_script.py  run_blender.py  test_commands.sh  test_rpr.py  test_script.ps1  test_script.sh  viewport_render.py
cmd_tools/test_script/: .flake8  .gitignore  README.md  add_script.py  cmd_render.py  compare_render.py  final_render.py  remove_script.py  render_test.ps1  run_blender_with_rpr.cmd  run_render.cmd  run_render.sh  viewport_render.py
cmd_tools/test_script/RPR_BMW/: RPR_BMW_comparison.txt
cpp/PluginContext/: PluginContext.cpp  PluginContext.h
osx/: postbuild.sh
osx/trace/: .gitignore
osx/trace/TraceRPR.xcodeproj/: project.pbxproj
src/: RPRBlender.pyproj
src/bindings/pyrpr/: .gitignore  conftest.py  imagefilterswrap.h  imagefilterswrap_metal.h  pyrprgltfwrap_make.py  pyrprimagefilterswrap_make.py  pyrpropenclwrap_make.py  pyrprsupportwrap_make.py  pyrprwrap_make.py  readme.txt  rpr.py  rpr_load_store.py  rprinfo.py  rprinfo.txt  rprwrap.h  test_.py
src/bindings/pyrpr/test_trace/: CMakeLists.txt
src/rprblender/: EULA.html  __init__.py  addon.py  addon_test.py  config.py  conftest.py  editor_nodes.py  editor_sockets.py  environment_op.py  export.py  export_test.py  helpers.py  image_filter.py  images.py  lights.py  material_browser.py  material_editor.py  node_editor.py  node_thumbnail.py  node_unwrapping.py  nodes.py  properties.py  properties_test.py  pytest.ini  render_test.py  sync.py  testing.py  timing.py  ui.py  version_checking.py  versions.py
src/rprblender/converter/: __init__.py  converter.py  cycles_converter.py
src/rprblender/core/: buffer.py  image.py  nodes.py
src/rprblender/engine/: __init__.py  animation_engine.py  animation_engine_hybrid.py  animation_engine_hybridpro.py  context.py  context_hybrid.py  context_hybridpro.py  engine.py  export_engine.py  image_filter.py  notifier.py  preview_engine.py  render_engine.py  render_engine_2.py  render_engine_hybrid.py  render_engine_hybridpro.py  viewport_engine.py  viewport_engine_2.py  viewport_engine_hybrid.py  viewport_engine_hybridpro.py
src/rprblender/export/: __init__.py  camera.py  hair.py  image.py  instance.py  light.py  material.py  mesh.py  object.py  openvdb.py  particle.py  to_mesh.py  volume.py  world.py
src/rprblender/img/: env.hdr  sun.tga
src/rprblender/material_library/: __init__.py  image_loader.py  library.py  loader.py  path.py
src/rprblender/nodes/: __init__.py  blender_nodes.py  export.py  export_by_rules.py  material_exporter.py  node_item.py  (+6 more)
src/tools/: athena_bin.py  encrypt_athena_bin.py  load_addon.py
tests/addon/: extract_scene.py  render_scene.py  test.py
tests/batch_render/: render_with_rpr.py
tests/blender_tests/: analyze_failure.py  convert_npy_to_image.py  run_all_tests.py
tests/commandline/: run_blender.py  test_rpr.py
tests/convert/: coversion_errors.py
tests/core/: CMakeLists.txt  test.py  test_context.cpp  test_cpu_context_restart.cpp  test_many_contexts.cpp  test_multithreading.cpp
tests/cython/: build.cmd  rpr.pyx  setup.py  test.py
tests/export/: dupli.py
tests/nodes/: walk_material.py
tests/numpy_util/: distance_field.py
tests/preview/: orb.blend
tests/sky/: test_native_perf.py
tests/stress/: material_import_stress.py
(+220 files in other folders)
